# BRAID

./: .gitignore  BENCHMARK_HANDOFF.md  BRAID_PROJECT_GUIDE.md  EVAL_SET.md  FAILURE_MATRIX.md  LICENSE  README.md  environment-benchmark.yml  environment-gpu.yml  environment.yml  pyproject.toml  requirements-benchmark.txt  requirements.txt
benchmarks/: __init__.py  additional_datasets.md  bootstrap_benchmark.py  build_default_conformal_calibrator.py  deconfounded_sharpness_analysis.py  figstyle.py  generate_longread_validation.py  generate_report.py  generate_v7_report.py  gm12878_replicate_calibration.py  junction_pair_benchmark.py  liftover_qki_targets.py  prepare_public_validation_metadata.py  psi_comparison.py  qki_benchmark.py  qki_rmats_benchmark.py  regenerate_pacbio_validation.py  rtpcr_benchmark.py  run_after_download.sh  run_benchmark.py  run_decomposer_comparison.py  run_denovo_benchmark.py  run_multi_dataset_benchmark.py  run_multirep_benchmark.sh  run_pacbio_nonSE.sh  run_qki_benchmark.sh  run_qki_rmats_benchmark.sh  run_real_benchmark.py  run_real_nightly.py  run_real_proxy.py  run_real_variant_matrix.py  run_recovery_sweep.py  run_splicing_benchmark.py  sgnex_download_manifest.tsv  sgnex_dpsi_validation.py  target_benchmark.py  target_vs_stringtie.py  tune_overdispersed_scale.py
braid/: __init__.py  __main__.py  cli.py  diagnostics.py  doctor.py  output_safety.py  pipeline.py  prism_dashboard.py
braid_results/: differential.tsv
dashboard/: app.py
demo/: run_demo.py
paper/: braid.tex  generate_figures.py
rapidsplice/: __init__.py  __main__.py  cli.py  diagnostics.py  doctor.py  pipeline.py  prism_dashboard.py
tests/: conftest.py  test_adapters.py  test_adapters_parsers_qa.py  test_adaptive_conditional.py  test_bam_reader.py  test_benchmark_consumer_columns.py  test_benchmark_decomposer_compare.py  test_benchmark_real.py  test_benchmark_real_variant_matrix.py  test_benchmark_recovery_sweep.py  test_bootstrap.py  test_braid_bootstrap.py  test_calibration_metrics.py  test_cli_assemble.py  test_cli_assemble_output.py  test_cli_dashboard.py  test_cli_run.py  test_cli_target.py  test_cli_target_output.py  test_conformal.py  test_conformal_nan_safety.py  test_cuda_batch.py  test_dashboard_data_loader.py  test_dashboard_event_table.py  test_dashboard_pickle_safety.py  (+43 more)
(+253 files in other folders)
